listings/ch03-common-programming-concepts/no-listing-01-variables-are-immutable/output.txt
$ cargo run
   Compiling zmienne v0.1.0 (file:///projects/zmienne)
error[E0384]: cannot assign twice to immutable variable `x`
 --> src/main.rs:4:5
  |
2 |     let x = 5;
  |         -
  |         |
  |         first assignment to `x`
  |         help: make this binding mutable: `mut x`
3 |     println!("Wartość x wynosi: {}", x);
4 |     x = 6;
  |     ^^^^^ cannot assign twice to immutable variable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0384`.
error: could not compile `zmienne`

To learn more, run the command again with --verbose.
